--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -11,6 +11,7 @@
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.2);
+  z-index: 4;
 }
 
 .dialog {
@@ -18,5 +19,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1;
+  z-index: 2;
+  min-width: 396px;
+  min-height: 400px;
 }
