--- a/src/components/SearchAsset/SearchAsset.scss
+++ b/src/components/SearchAsset/SearchAsset.scss
@@ -5,14 +5,36 @@
 
 .search-input-wrapper {
     position: relative;
+    border: #dae1e9 solid 1px;
+    border-radius: 4px;
+    &::before {
+        content: '';
+        z-index: 2;
+        position: absolute;
+        display: block;
+        width: 12px;
+        height: 12px;
+        background-image: url('../../img/input-search-icon.svg');
+        background-size: 100% 100%;
+        top: 50%;
+        left: 17px;
+        transform: translateY(-50%);
+    }
+    &.hide-icon {
+        &::before {
+            display: none;
+        }
+    }
 }
 
 .search-input {
+    position: relative;
+    z-index: 1;
     width: 100%;
     height: 48px;
-    border: #dae1e9 solid 1px;
-    border-radius: 4px;
     padding: 0 42px;
+    border: 0;
+    border-radius: 4px;
 
     &::placeholder {
         color: #333333;
@@ -25,15 +47,17 @@
         min-height: 120px;
         resize: vertical;
     }
+
 }
 
 .search-input-arrow {
+    position: absolute;
+    z-index: 1;
     height: 48px;
     width: 48px;
     cursor: pointer;
     border: 0;
     background-color: transparent;
-    position: absolute;
     right: 0;
     top: 50%;
     transform: translateY(-50%);
@@ -60,6 +84,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        width: 100%;
         padding: 12px 16px;
         list-style: none;
         cursor: pointer;
@@ -86,5 +111,14 @@
     &__asset-name {
         font-size: 12px;
         color: #959DAE;
+    }
+}
+
+.search-asset-container {
+    .search-input-dropdown__item.in-input {
+        position: absolute;
+        top: 0;
+        left: 0;
+        user-select: none;
     }
 }
